# PCL_Learning

./: README.md
0-app/BoundingBox/: BoundingBox.cpp  CMakeLists.txt  pcd_read.py  surface_cloud.pcd
0-app/PointCloudCreate/: CMakeLists.txt
0-app/extract_normal/: CMakeLists.txt  extract_normal.cpp
1-filter/passthrough/: passthrough.cpp
1-filter/voxel_grid/: voxel_grid.cpp
2-recognize/correspondence_grouping/: CMakeLists.txt  correspondence_grouping.cpp
3-transformate/mesh2pcd/: CMakeLists.txt  mesh2pcd.cpp  mesh_sampling.cpp  mesh_single_view.cpp  pcd_viewer.cpp
3-transformate/obj2pcd /: CMakeLists.txt
3-transformate/ply2pcd/: CMakeLists.txt  ply2pcd.cpp  ply_show.cpp
4-reconstruction/greedy_projection/: greedy_projection.cpp
4-reconstruction/recon_marchingCubes/: CMakeLists.txt  recon_marchingCubes.cpp
4-reconstruction/recon_poisson/: CMakeLists.txt  recon_poisson.cpp
PCD_Files/: Kinect2_Cloud.pcd  Kinect2_XYZ.pcd  Kinect2_XYZ_1.pcd  Kinect2_XYZ_2.pcd  Kinect2_XYZ_3.pcd
PCL/: CMakeLists.txt  main.cpp
PCL_Kinect2/: CMakeLists.txt  main.cpp
PCL_Kinect2_indices/: main.cpp
PCL_Kinect2_test/: CMakeLists.txt  main.cpp  my_pcl_tools.h
PCL_Normal/: CMakeLists.txt  main.cpp
PointCloudCreate/: main.cpp
cloud_viewer/: cloud_viewer.cpp
cluster_extraction/: CMakeLists.txt  cluster_extraction.cpp  plane_extract_cluster_extraction.cpp
compute_centroid/: CMakeLists.txt  compute_centroid.cpp
extract_indices/: extract_indices.cpp
pcd_read/: pcd_read.cpp
pcd_show/: CMakeLists.txt  pcd_show.cpp
pcl_view_test/: CMakeLists.txt  pcl_view_test.cpp  result4.txt
pcl_visualizer/: pcl_visualizer_demo.cpp
segmentation/: CMakeLists.txt  example_lccp_segmentation.cpp  lccp_test.cpp
transformPointCloud/: CMakeLists.txt  pcl_pcd2ply  transform.cpp  transformPointCloud.cpp  vo5_transformed.ply
vfh_cluster_classifier/: CMakeLists.txt  build_tree.cpp  nearest_neighbors.cpp
